# branchy

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  create.rs  main.rs  prune.rs  sub_shell.rs
src/create/: branch.rs  config.rs  worktree.rs
src/prune/: eligibility.rs  log.rs  safe_prune.rs
